added paths in app-routing-module.ts

--- a/src/app/modules/core/components/user/user-container/user-container.component.html
+++ b/src/app/modules/core/components/user/user-container/user-container.component.html
@@ -1,1 +1,4 @@
-<p>user-container works!</p>
+<div class="d-flex flex-column align-items-around justify-content-center bg-primary">
+    <p class="text-center text-white mt-2">user-container.component</p>
+    <app-user-list></app-user-list>
+</div>
