--- a/src/app/modules/core/components/user/user-list/user-list.component.html
+++ b/src/app/modules/core/components/user/user-list/user-list.component.html
@@ -1,1 +1,8 @@
-<p>user-list works!</p>
+<div class="d-flex bg-success">
+    <p class="text-white text-center mt-2">user-list.component</p>
+    <!-- <ol>
+      <li class="mb-2" *ngFor="let user of users">
+          <user-single [user]="user" (deletedElement)="deleteFunc($event)"></user-single>
+      </li>
+  </ol> -->
+</div>
