--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -1,1 +1,4 @@
-<p>navbar works!</p>
+<div class="d-flex justify-content-around nav-pills">
+    <a class="nav-link" href="#" routerLink="/users" routerLinkActive="active">Utenti</a>
+    <a class="nav-link" href="#" routerLink="/order" routerLinkActive="active">Order</a>
+</div>
