--- a/src/app/modules/core/components/user/user-list/user-list.component.html
+++ b/src/app/modules/core/components/user/user-list/user-list.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex bg-success">
+<div class="d-flex flex-column align-items-center bg-success">
     <p class="text-white text-center mt-2">user-list.component</p>
-    <!-- <ol>
-      <li class="mb-2" *ngFor="let user of users">
-          <user-single [user]="user" (deletedElement)="deleteFunc($event)"></user-single>
-      </li>
-  </ol> -->
+    <ol>
+        <li class="mb-2" *ngFor="let user of users">
+            <app-user-single [user]="user"></app-user-single>
+        </li>
+    </ol>
 </div>
