--- a/src/app/modules/core/components/user/user-container/user-container.component.html
+++ b/src/app/modules/core/components/user/user-container/user-container.component.html
@@ -1,4 +1,10 @@
-<div class="d-flex flex-column align-items-around justify-content-center bg-primary">
+<div class="d-flex flex-column align-items-around bg-primary">
     <p class="text-center text-white mt-2">user-container.component</p>
-    <app-user-list></app-user-list>
-</div>
+    <div class="d-flex justify-content-between">
+        <div class="d-flex flex-column bg-success p-3">
+            <app-user-list [users]="users" (selectedElement)="selectFunc($event)"></app-user-list>
+        </div>
+        <div class="d-flex flex-column bg-danger p-3" *ngIf="viewDetails">
+            <app-user-detail [user]="selectedUser" (closedDetails)="closeDetailsFunc()"></app-user-detail>
+        </div>
+    </div>
