--- a/src/app/modules/core/components/user/user-container/user-container.component.scss
+++ b/src/app/modules/core/components/user/user-container/user-container.component.scss
@@ -1,3 +1,15 @@
 .bg-primary {
     padding: 10px;
+    height: 100vh;
+}
+
+.bg-success {
+    width: 40%;
+    height: fit-content;
+}
+
+.bg-danger {
+    width: 40%;
+    height: 500px;
+    overflow-y: scroll;
 }
