--- a/src/app/edit-counter/edit-counter.component.html
+++ b/src/app/edit-counter/edit-counter.component.html
@@ -1,3 +1,3 @@
-<input class="text-center" type="number" [(ngModel)]="counter.defaultValue" placeholder="Inserire valore">
-<button (click)="counter.addCounter()">aggiungi</button>
-<button (click)="counter.subCounter()">sottrai</button>
+<input class="text-center" type="number" min="1" [(ngModel)]="defaultValueTs" placeholder="Inserire valore">
+<button (click)="addCounterTs()">aggiungi</button>
+<button (click)="subCounterTs()">sottrai</button>
