--- a/src/app/edit-counter/edit-counter.component.html
+++ b/src/app/edit-counter/edit-counter.component.html
@@ -1,3 +1,3 @@
-<input class="text-center" type="number" min="1" [(ngModel)]="defaultValueTs" placeholder="Inserire valore">
+<input class="text-center" type="number" min="1" [(ngModel)]="defaultValue" placeholder="Inserire valore">
 <button (click)="addCounterTs()">aggiungi</button>
 <button (click)="subCounterTs()">sottrai</button>
